--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing-app
 spring.datasource.username=postgres
 spring.datasource.password=admin
@@ -11,3 +13,13 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 
 spring.jpa.defer-datasource-initialization=true
+
+keycloak.realm=cydeo-dev
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.ssl-required=external
+#client
+keycloak.resource=ticketing-app
+keycloak.credentials.secret=TbgFR7Xw9He9RU2xRAt4YkttiZa6xCdR
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+spring.main.allow-circular-references=true
