admin information provided to create users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ keycloak.credentials.secret=TbgFR7Xw9He9RU2xRAt4YkttiZa6xCdR
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.main.allow-circular-references=true
+
+master.user=admin
+master.user.password=admin
+master.realm=master
+master.client=master-client
